--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       crossorigin="anonymous"
     />
 
+    <!-- SASS -->
+    <link rel="stylesheet" href="css/custom.css">
     <!-- STYLE -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -24,17 +26,19 @@
 
     <header class="container-fluid header">
       <div class="container header-div">
-        <div class="row">
+        <div class="row align-items-center chat-row justify-content-between">
           <div class="col">
             <img class="logo-header" src="img/Logo.svg" alt="">
           </div>
           <nav class="col btn-div">
-            <ul>
-              <li>Home</li>
-              <li>Projetos</li>
-              <li>Quem somos</li>
-              <li>contato</li>
-            </ul>
+            <div class="row justify-content-end row-cols-auto"> 
+                <button type="button" class="btn btn-secondary active">Home</button>
+                <button type="button" class="btn btn-secondary">Projetos</button>
+                <button type="button" class="btn btn-secondary">Quem Somos</button>
+                <button type="button" class="btn btn-secondary">Contato</button>
+            </div>
+            
+           
           </nav>
         </div>
       </div>
