--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container header-div">
         <div class="row align-items-center chat-row justify-content-between">
           <div class="col">
-            <img class="logo-header" src="img/Logo.svg" alt="">
+            <a href="#"><img class="logo-header" src="img/Logo.svg" alt="Logo Hebert"></a>
           </div>
           <nav class="col btn-div">
             <div class="row justify-content-end row-cols-auto"> 
