--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <div class="container-fluid chat">
       <div class="container">
           <div class="d-flex justify-content-between align-items-center">
-            <div>Casas prontas para morar</div>
+            <div class="talk-1 text-sm-left">Casas prontas para morar</div>
             <div class="d-flex align-items-center">
-              <div class="talk">
+              <div class="talk text-sm-left">
                 Fale conosco
               </div>
               <div>
@@ -63,7 +63,7 @@
       </div> 
     </div>
 
-    <!-- /section 1 -->
+    <!-- Section 1 -->
     <section class="p-5">
       <div class="container text-secondary">
         <div class="row align-items-center row-md-col-1">
@@ -76,6 +76,46 @@
               <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, consequuntur vel magnam consequatur quibusdam ab sit similique id, eligendi facere aspernatur repellat vero. Nemo incidunt, fuga dignissimos cumque vitae possimus!</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea perferendis fuga possimus enim, hic quos sunt aperiam dolorem a, excepturi molestias ipsum voluptatum iusto voluptas!</p>
               <p class="lead text-center">Para quem faz questão de morar bem!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section 2 -->
+    <section class="p-5">
+      <div class="container text-secondary">
+        <div class="row row-md-col-1 align-items-center">
+
+          <!-- col 1 -->
+          <div class="col-xl-8 col-lg-12 mb-5 border">
+            <div class="row align-items-center">
+              <div class="col-lg-12 col-xl-6 pl-0">
+                <img class="house-1 img-fluid" src="img/house-1.jpg" alt="">
+              </div>
+
+              <div class="col-lg-12 col-xl-6">
+                  <h3 class="h3-modern-house text-center">
+                  Casas Modernas de Alto Padrão
+                </h3>
+                <p class="text-left">
+                  Seguindo as tendências do que é mais moderno e sofisticado, construímos casas aconchegantes, tudo isto feito com materiais de excelente qualidade.
+                </p>
+
+                <p class="text-left">
+                  Ao adquirir um imóvel que ainda estiver em fase de construção, você pode escolher o acabamento de sua preferência, tudo feito para melhor atendê-lo.
+                </p>
+                <p class="text-left">
+                  Agende uma visita em uma de nossas obras.
+                </p>
+                <p class="text-center lead text-uppercase font-weight-bold">
+                  Tudo pensado para você que faz questão de morar bem!
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Col 2 -->
+          <div class="col-xl-4 col-lg-12">
+
           </div>
         </div>
       </div>
