--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     </section>
 
     <!-- Section 2 -->
-    <section class="p-5">
+    <section class="">
       <div class="container text-secondary">
-        <div class="row align-items-start g-5">
+        <div class="row align-items-center g-5">
 
           <!-- col 1 -->
           <div class="col-xl-8 col-lg-12">
@@ -123,8 +123,8 @@
           </div>
         
           <!-- Col 2 -->
-          <div class="col-xl-4 col-lg-12 p-3 text-left">
-           <p>
+          <div class="col-xl-4 col-lg-12 text-left">
+           <p class="text-left">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id provident obcaecati eveniet placeat, atque quo blanditiis nam ducimus tempore laborum magni officiis, iure quia aut esse quod. Distinctio ex iusto ipsam possimus magnam quis vitae saepe assumenda, porro fugiat qui quae aspernatur eveniet. Maiores atque numquam alias, asperiores quasi officia nesciunt quis? Amet inventore quia libero tenetur dolores, nisi provident facilis modi labore consequuntur explicabo reprehenderit harum, corporis nostrum dolorum. Totam alias hic est, neque odio harum? Doloribus repudiandae ut, cupiditate voluptate tempora culpa quidem, at voluptatum non pariatur ipsa sapiente ea quasi, ab earum eos. Vero totam illum aperiam.
            </p>
           </div>
