--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <!-- Section 1 -->
-    <section class="p-5">
+    <section class="">
       <div class="container text-secondary">
         <div class="row align-items-center row-md-col-1 g-5">
           <div class="col-lg-6 col-xl-8 mb-5">
