--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <!-- Section 1 -->
-    <section class="">
+    <section class="pt-5">
       <div class="container text-secondary">
         <div class="row align-items-center row-md-col-1 g-5">
           <div class="col-lg-6 col-xl-8 mb-5">
@@ -82,7 +82,7 @@
     </section>
 
     <!-- Section 2 -->
-    <section class="">
+    <section class="pt-5">
       <div class="container text-secondary">
         <div class="row align-items-center g-5">
 
