--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </nav>
     </header>
-    <div class="container-fluid chat">
+    <div class="container-fluid chat pb-5">
       <div class="container">
           <div class="d-flex justify-content-between align-items-center">
             <div class="talk-1 text-sm-left">Casas prontas para morar</div>
@@ -64,7 +64,7 @@
     </div>
 
     <!-- Section 1 -->
-    <section class="pt-5">
+    <section class="">
       <div class="container text-secondary">
         <div class="row align-items-center row-md-col-1 g-5">
           <div class="col-lg-6 col-xl-8 mb-5">
@@ -82,7 +82,7 @@
     </section>
 
     <!-- Section 2 -->
-    <section class="pt-5">
+    <section class="">
       <div class="container text-secondary">
         <div class="row align-items-center g-5">
 
