--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <!-- Section 2 -->
-    <section class="pt-5">
+    <section class="">
       <div class="container text-secondary">
         <div class="row align-items-center g-5">
 
