--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
     </div>
 
     <!-- Section 1 -->
-    <section class="p-5">
+    <section class="mt-5">
       <div class="container text-secondary">
-        <div class="row align-items-center row-md-col-1 g-5">
-          <div class="col-lg-6 col-xl-8 mb-5">
-              <img id="project-1" class="img-fluid d-sm-block" src="img/project-1.jpg" alt="Projeto Residencial do Lago">
+        <div class="row align-items-center row-md-col-1">
+          <div class="col-lg-12 col-xl-8 mb-5">
+              <img id="project-1" class="img-fluid d-block" src="img/project-1.jpg" alt="Projeto Residencial do Lago">
             </div>
 
-          <div class="col-lg-6 col-xl-4">
+          <div class="col-lg-12 col-xl-4">
             <h3 class="text-center">Casas Prontas para morar</h3>
               <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, consequuntur vel magnam consequatur quibusdam ab sit similique id, eligendi facere aspernatur repellat vero. Nemo incidunt, fuga dignissimos cumque vitae possimus!</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea perferendis fuga possimus enim, hic quos sunt aperiam dolorem a, excepturi molestias ipsum voluptatum iusto voluptas!</p>
@@ -82,7 +82,7 @@
     </section>
 
     <!-- Section 2 -->
-    <section class="">
+    <section class="mt-5">
       <div class="container text-secondary">
         <div class="row align-items-center g-5">
 
