--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <!-- Section 1 -->
         <section class="my-5">
-            <div class="container text-secondary">
+            <div class="container text-secondary my-5">
                 <div class="row align-items-center row-md-col-1">
                     <div class="col-lg-12 col-xl-8 mb-5">
                         <img id="project-1" class="img-fluid d-block" src="img/project-1.jpg" alt="Projeto Residencial do Lago">
@@ -84,7 +84,7 @@
 
         <!-- Section 2 -->
         <section class="my-5">
-            <div class="container text-secondary">
+            <div class="container text-secondary my-5">
                 <div class="row align-items-center">
 
                     <!-- col 1 -->
@@ -98,7 +98,7 @@
                             </div>
 
                             <!-- text col -->
-                            <div class="col-md-6">
+                            <div class="col-md-6  my-5">
                                 <div class="grid">
                                     <div class="g-col">
                                         <h3 class="text-center mb-4">
@@ -140,8 +140,8 @@
                         <div class="row">
                             <!-- project 1 -->
                             <div class="col">
-                                <div class="row bg-light align-items-center">
-                                    <div class="col">
+                                <div class="row bg-light align-items-center my-3">
+                                    <div class="col my-3">
                                         <img class="img-fluid" src="img/thumb-1.jpg" alt="Thumb-1">
                                     </div>
                                     <div class="col">
@@ -155,7 +155,7 @@
                                 <!-- project 2 -->
                                 <div class="col">
                                     <div class="row align-items-center">
-                                        <div class="col">
+                                        <div class="col my-3">
                                             <a href="#"><img class="img-fluid" src="img/thumb-2.jpg" alt="Thumb-1"></a>
                                         </div>
                                         <div class="col">
@@ -168,8 +168,8 @@
 
                                     <!-- project 3 -->
                                     <div class="col">
-                                        <div class="row bg-light align-items-center">
-                                            <div class="col">
+                                        <div class="row bg-light align-items-center my-3">
+                                            <div class="col my-3">
                                                 <img class="img-fluid" src="img/thumb-1.jpg" alt="Thumb-1">
                                             </div>
                                             <div class="col">
@@ -188,11 +188,27 @@
                     </div>
                 </div>
             </div>
-
         </section>
         <!-- End of section 2 -->
 
-        <section class="my-5"></section>
+        <!-- Section 3 -->
+        <section class="my-5">
+            <div class="container">
+                <div class="row bg-light align-items-center">
+                    <div class="col-xl-6 col-md-12 py-2">
+                        <div class="responsive-video embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1AAU_btBN7s" title="YouTube video player" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          </div>
+                    </div>
+                    <div class="col-xl-6 col-md-12 mt-5">
+                        <h3 class="text-secondary text-center mb-3">Construindo seu Projeto de Vida!</h3>
+                        <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sed, praesentium cum ullam maiores, aut obcaecati distinctio asperiores beatae sunt reprehenderit dolore nostrum impedit hic quam saepe repellat consectetur ea.</p>
+                    </div>
+                </div>
+               
+            </div>
+            
+        </section>
 
 
         <!-- Bootstrap JS JS -->
