--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                         </p>
 
                                         <p class="text-left">
-                                            Ao adquirir um imóvel que ainda estiver em fase de construção, você pode escolher o acabamento de sua preferência, tudo feito para melhor atendê-lo.
+                                            Ao adquirir um imóvel que ainda estiver em fase de construção, você pode escolher o acabamento de sua preferência,  tudo feito para melhor atendê-lo.
                                         </p>
 
                                         <p class="text-left">
@@ -120,7 +120,7 @@
                                     </div>
                                     <div class="g-col align-self-end">
                                         <p class="text-center lead text-uppercase font-weight-bold">
-                                            Tudo pensado para você que faz questão de morar bem!
+                                            Para você que faz questão de morar bem!
                                         </p>
                                     </div>
                                 </div>
@@ -140,44 +140,50 @@
                         <div class="row">
                             <!-- project 1 -->
                             <div class="col">
-                                <div class="row bg-light align-items-center my-3">
-                                    <div class="col my-3">
-                                        <img class="img-fluid" src="img/thumb-1.jpg" alt="Thumb-1">
+                                <a href="#" class="link-secondary">
+                                    <div id="project-link" class="row bg-light align-items-center my-3">
+                                        <div class="col my-3">
+                                            <img class="thumb img-fluid" src="img/thumb-1.jpg" alt="Thumb-1">
+                                        </div>
+                                        <div class="col">
+                                            <h5 class="text-center">Projeto 1</h5>
+                                            <p class="text-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                            </p>
+                                        </div>    
                                     </div>
-                                    <div class="col">
-                                        <h5 class="text-center">Projeto 1</h5>
-                                        <p class="text-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                        </p>
-                                    </div>
-                                </div>
+                                </a>
                                 <!-- end of project 1 -->
 
                                 <!-- project 2 -->
                                 <div class="col">
-                                    <div class="row align-items-center">
-                                        <div class="col my-3">
-                                            <a href="#"><img class="img-fluid" src="img/thumb-2.jpg" alt="Thumb-1"></a>
+                                    <a href="#" class="link-secondary">
+                                        <div id="project-link" class="row align-items-center my-3">
+                                            <div class="col my-3">
+                                                <img class="thumb img-fluid" src="img/thumb-2.jpg" alt="Thumb-1">
+                                            </div>
+                                            <div class="col">
+                                                <h5 class="text-center">Projeto 1</h5>
+                                                <p class="text-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                                </p>
+                                            </div>    
                                         </div>
-                                        <div class="col">
-                                            <h5 class="text-center">Projeto 2</h5>
-                                            <p class="text-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                            </p>
-                                        </div>
-                                    </div>
+                                    </a>
                                     <!-- end of project 2 -->
 
                                     <!-- project 3 -->
                                     <div class="col">
-                                        <div class="row bg-light align-items-center my-3">
-                                            <div class="col my-3">
-                                                <img class="img-fluid" src="img/thumb-1.jpg" alt="Thumb-1">
+                                        <a href="#" class="link-secondary">
+                                            <div id="project-link" class="row bg-light align-items-center my-3">
+                                                <div class="col my-3">
+                                                    <img class="thumb img-fluid" src="img/thumb-1.jpg" alt="Thumb-1">
+                                                </div>
+                                                <div class="col">
+                                                    <h5 class="text-center">Projeto 3</h5>
+                                                    <p class="text-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                                    </p>
+                                                </div>    
                                             </div>
-                                            <div class="col">
-                                                <h5 class="text-center">Projeto 3</h5>
-                                                <p class="text-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                                </p>
-                                            </div>
-                                        </div>
+                                        </a>
                                         <!-- end of project 3 -->
                                     </div>
 
