finishing the footer

--- a/index.html
+++ b/index.html
@@ -241,21 +241,52 @@
         </section>
 
         <!-- Footer -->
-        <footer class="pt-5 text-white text-center position-relative">
+        <footer class="pt-5 text-white position-relative">
             <div class="container">
                 <div class="row row-cols-xl-3 row-cols-lg-2 row-cols-md-1 row-cols-1 justify-content-center">
-                    <div class="col mb-5 border">
 
+                    <!-- Footer column 1 -->
+                    <div class="footer-col-1 col mb-5 text-left text-white-50">
+                        <h3>Hebert <span>Construtor</span></h3>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tempora, commodi dicta laudantium adipisci eaque aut optio consequatur consectetur excepturi?
+                        </p>
+                        <p class="leader text-uppercase">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
-                    <div class="col mb-5">
+
+                     <!-- Footer Column 3 -->
+                     <div class="footer-col-3 col mb-5 order-lg-last">
+                        <div class="row">
+                            <h3 class="mb-3">News<span class="text-primary">letter</span></h3>
+                            <div class="col">
+                                <form action="/clients.php" method="GET">
+                                    <div class="row mb-3">
+                                        <label for="colFormLabel" class="col-sm-2 col-form-label">Nome</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" class="form-control" id="colFormLabel" placeholder="Digite seu nome:">
+                                            </div>
+                                    </div>
+
+                                    <div class="row mb-3">
+                                        <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
+                                            <div class="col-sm-10">
+                                                <input type="email" class="form-control" id="colFormLabel" placeholder="Digite seu e-mail">
+                                            </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary mt-4"> Enviar </button>
+                                </form>
+                            </div>
+                        </div>  
+                    </div>
+
+                    <!-- Footer column 2 -->
+                    <div class="footer-col-2 col text-center mb-5">
                         <a href="#"><i id="whatsapp" class="fab fa-whatsapp-square text-white-50"></i></a>
                         <a href="#"><i id="facebook" class="fab fa-facebook-square text-white-50"></i></a>
                         <a href="#"><i id="instagram" class="fab fa-instagram-square text-white-50"></i></a>
                         <a href="#"><i id="youtube" class="fab fa-youtube text-white-50"></i></a>               
                     </div>
-                    <div class="col mb-5 border">
-                        
-                    </div>
+                     
                 </div>              
             </div>
             <div class="container pt-5 pb-2">
