adjustin the breakpoints

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-
+    </div>
         <!-- Section 1 -->
         <section class="my-5">
             <div class="container text-secondary my-5">
@@ -254,8 +254,18 @@
                         <p class="leader text-uppercase">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
 
+                    
+
+                    <!-- Footer column 2 -->
+                    <div class="footer-col-2 col order-1 text-center mb-5">
+                        <a href="#"><i id="whatsapp" class="fab fa-whatsapp-square text-white-50"></i></a>
+                        <a href="#"><i id="facebook" class="fab fa-facebook-square text-white-50"></i></a>
+                        <a href="#"><i id="instagram" class="fab fa-instagram-square text-white-50"></i></a>
+                        <a href="#"><i id="youtube" class="fab fa-youtube text-white-50"></i></a>               
+                    </div>
+
                      <!-- Footer Column 3 -->
-                     <div class="footer-col-3 col mb-5 order-lg-last">
+                     <div class="footer-col-3 col mb-5 order-lg-1">
                         <div class="row">
                             <h3 class="mb-3">News<span class="text-primary">letter</span></h3>
                             <div class="col">
@@ -277,14 +287,6 @@
                                 </form>
                             </div>
                         </div>  
-                    </div>
-
-                    <!-- Footer column 2 -->
-                    <div class="footer-col-2 col text-center mb-5">
-                        <a href="#"><i id="whatsapp" class="fab fa-whatsapp-square text-white-50"></i></a>
-                        <a href="#"><i id="facebook" class="fab fa-facebook-square text-white-50"></i></a>
-                        <a href="#"><i id="instagram" class="fab fa-instagram-square text-white-50"></i></a>
-                        <a href="#"><i id="youtube" class="fab fa-youtube text-white-50"></i></a>               
                     </div>
                      
                 </div>              
